# llmsh

./: .gitignore  CHANGELOG.md  README.md  index.html  stress-test.py
.github/workflows/: python-publish.yml  python.yml  rust.yml
hermitd/: DEVELOPMENT.md  README.md  __main__.py  bot.py  check.sh  format.sh  hermitd.conf.local.sample  hermitd.conf.remote.sample  hermitd.conf.template  hermitd.py  hermitd.service  messages.py  pyproject.toml  requirements-dev.txt  requirements-local.txt  requirements.txt
hermitd/hermitd/: __init__.py  __main__.py  bot.py  config.py  context.py  daemon.py  hermitd.conf.template  hermitd.py  hermitd.service  install.py  main.py  messages.py
hermitd/hermitd/llm/: __init__.py  _interfaces.py  claude.py  gemma.py  gpt.py
hermitd/llm/: __init__.py  interfaces.py  llama3.py
hermitd/tests/: __init__.py  test_bot.py  test_config.py  test_context.py  test_daemon.py  test_hermitd.py  test_llm.py
hermitd/tests/llm/: __init__.py  test_llm.py
hermitd/tests/resources/: hermitd.conf
llmsh/: Cargo.toml  README.md  debug_utils.py
llmsh/src/: io.rs  main.rs  messages.rs  parsing.rs  pty.rs  shell.rs  util.rs
