[package]
name = "llmsh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempfile = "3.1.0"
nix = { version = "0.29", features = ["fs", "process", "term"] }
mio = { version = "1.0.0", features = ["os-poll", "os-ext"] }
zmq = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"