[package]
name = "llmsh"
version = "0.1.0"
edition = "2021"
rust-version = "1.79"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1"
log = "0.4"
mio = { version = "1", features = ["os-poll", "os-ext"] }
nix = { version = "0.29", features = ["fs", "process", "term", "ioctl"] }
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simplelog = "0.12"
tempfile = "3.1.0"

uuid = { version = "1.10", features = ["v4"] }
zmq = "0.10.0"

[dev-dependencies]
rstest = "0.21"
